Fix z-index filter bar issue

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -886,7 +886,7 @@ footer {
     z-index: 100;
   }
   .movable.affix-top {
-    position: static;
+    position: relative;
   }
   .movable.affix {
     position: fixed;
